# sonora-chat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/api/: chat_api.py
app/services/: database.py  rag.py
